Shivi | Add test for TokenService.